@@ -2,7 +2,7 @@ package Qudo;
 use strict;
 use warnings;
 
-our $VERSION = '0.0211';
+our $VERSION = '0.0212';
 
 use Qudo::Manager;
 use Carp ();
