@@ -1,8 +1,10 @@
 Revision history for Perl extension Qudo
 
 0.0212
-   2010-07-17
+   2010-10-05
         - MOD: driver's func_from_id, func_from_name return not DBIx::Skinny::Row object but HashRef
+        - FIXED: failed exception message bug. (thnks hiroyuki akabane)
+
 0.0211
    2010-07-08
         - ADD: replace method for Qudo::Job.
